shrunk pw field in raw.scala.html to fix toolbar overflow. Fixes #1672

--- a/app/assets/stylesheets/common/_forms.less
+++ b/app/assets/stylesheets/common/_forms.less
@@ -61,6 +61,10 @@ select {
 		line-height: .9;
 		.font-size(.75);
 		.padding-width(@f8);
+
+		&.supermini{
+			width: 50px;
+		}
 	}
 
 	&.half {
